[workspace]
members = [
    "lox-ast",
    "nom-lox",
    "chumsky-lox",
    "pest-lox",
    "lalrpop-lox",
    "pom-lox",
    "winnow-lox",
    "parser-tests",
]
resolver = "2"

[workspace.dependencies]
lox-ast = { path = "lox-ast" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
