[workspace]
members = [
    "lox-ast",
    "nom-lox",
#    "chumsky-lox",
    "pest-lox",
    "lalrpop-lox",
    "pom-lox",
    "winnow-lox",
    "lelwel-lox",
    "parser-tests",
]
resolver = "2"
package.rust-version = "1.90"

[workspace.dependencies]
lox-ast = { path = "lox-ast" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
