[package]
name = "parser-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
lox-ast = { workspace = true }
nom-lox = { path = "../nom-lox" }
pest-lox = { path = "../pest-lox" }
winnow-lox = { path = "../winnow-lox" }
chumsky-lox = { path = "../chumsky-lox" }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "parser-comparison"
path = "src/main.rs"
