[package]
name = "parser-tests"
version = "0.1.0"
edition = "2024"
description = "Comprehensive test suite for all Lox parser implementations"

[dependencies]
lox-ast = { workspace = true }
nom-lox = { path = "../nom-lox" }
# chumsky-lox = { path = "../chumsky-lox" }  # Disabled due to macOS linker issues
pest-lox = { path = "../pest-lox" }
winnow-lox = { path = "../winnow-lox" }
lalrpop-lox = { path = "../lalrpop-lox" }
pom-lox = { path = "../pom-lox" }
lelwel-lox = { path = "../lelwel-lox" }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "3.0"

[lib]
name = "parser_tests"
path = "src/lib.rs"
